--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -30,8 +30,10 @@
 }
 
 /* --- Estilos Globais --- */
-html {
+html,
+body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
