--- a/public/styles/presentation.css
+++ b/public/styles/presentation.css
@@ -1,6 +1,7 @@
 .container_apresentacao_conteudo {
   display: flex;
   flex-direction: column-reverse;
+  justify-content: center;
   align-items: center;
   text-align: center;
   gap: 3rem;
